--- a/analytical/Cargo.toml
+++ b/analytical/Cargo.toml
@@ -5,5 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "analytical"
+path = "src/lib.rs"
+
+[[bin]]
+name = "analytical-bin"
+path = "src/main.rs"
+
 [dependencies]
 bitflags = "2.4.2"
