--- a/analytical/Cargo.toml
+++ b/analytical/Cargo.toml
@@ -12,6 +12,14 @@ path = "src/lib.rs"
 [[bin]]
 name = "analytical-bin"
 path = "src/main.rs"
+required-features = [ "tungstenite", "color-eyre", "pretty_env_logger", "serde_json", "serde", "reqwest" ]
 
 [dependencies]
 bitflags = "2.4.2"
+color-eyre = { version = "0.6.2", optional = true }
+log = "0.4.20"
+pretty_env_logger = { version = "0.5.0", optional = true }
+reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
+serde = { version = "1.0.195", features = ["derive"], optional = true }
+serde_json = { version = "1.0.111", optional = true }
+tungstenite = { version = "0.21.0", optional = true, features = ["rustls"] }
